ja-source/docusaurus-plugin-content-docs/version-4.x/sql-manual/sql-statements/table-and-view/index/CREATE-INDEX.md
---
{
  "title": "CREATE INDEX",
  "description": "tableに新しいインデックスを作成します。table名とインデックス名を指定する必要があります。オプションで、インデックスタイプ、プロパティ、およびコメントを指定できます。",
  "language": "ja"
}
---
## 説明

tableに新しいインデックスを作成します。table名とインデックス名を指定する必要があります。オプションで、インデックスタイプ、プロパティ、およびコメントを指定できます。

## 構文

```sql
CREATE INDEX [IF NOT EXISTS] <index_name> 
             ON <table_name> (<column_name> [, ...])
             [USING {INVERTED | NGRAM_BF | ANN}]
             [PROPERTIES ("<key>" = "<value>"[ , ...])]
             [COMMENT '<index_comment>']
```
## 必須パラメータ

**1. `<index_name>`**

> インデックスの識別子（つまり、名前）を指定します。これはTable内で一意である必要があります。
>
> 識別子は文字で始まる必要があり（Unicode名前サポートが有効な場合、任意の言語の任意の文字を使用可能）、識別子文字列全体がバッククォートで囲まれていない限り（例：`My Object`）、スペースや特殊文字を含むことはできません。
>
> 識別子は予約キーワードにすることはできません。
>
> 詳細については、識別子と予約キーワードの要件を参照してください。

**2. `<table_name>`**

> Tableの識別子（つまり、名前）を指定します。これはデータベース内で一意である必要があります。
>
> 識別子は文字で始まる必要があり（Unicode名前サポートが有効な場合、任意の言語の任意の文字を使用可能）、識別子文字列全体がバッククォートで囲まれていない限り（例：`My Object`）、スペースや特殊文字を含むことはできません。
>
> 識別子は予約キーワードにすることはできません。
>
> 詳細については、識別子と予約キーワードの要件を参照してください。

**3. `<column_name> [, ...]`**

> インデックスを作成する列を指定します（現在は1つの列のみサポート）。列はTable内で一意である必要があります。
>
> 識別子は文字で始まる必要があり（Unicode名前サポートが有効な場合、任意の言語の任意の文字を使用可能）、識別子文字列全体がバッククォートで囲まれていない限り（例：`My Object`）、スペースや特殊文字を含むことはできません。
>
> 識別子は予約キーワードにすることはできません。
>
> 詳細については、識別子と予約キーワードの要件を参照してください。

## オプションパラメータ

**1. `USING {INVERTED | NGRAM_BF}`**

> インデックスタイプを指定します。現在、2つのタイプがサポートされています：**INVERTED**（転置インデックス）と**NGRAM_BF**（ngram bloomfilterインデックス）。

**2. `PROPERTIES ("<key>" = "<value>"[ ,  ...])`**

> 一般的なPROPERTIES形式を使用してインデックスのパラメータを指定します。各インデックスでサポートされるパラメータとセマンティクスについては、特定のインデックスタイプのドキュメントを参照してください。

**3. `COMMENT '<index_comment>'`**

> メンテナンスを容易にするためのインデックスのコメントを指定します。

## アクセス制御要件

このSQLコマンドを実行するユーザーは、少なくとも以下の権限を持つ必要があります：

| 権限       | オブジェクト | 備考                                                    |
| ---------- | ------------ | ------------------------------------------------------ |
| ALTER_PRIV | Table        | CREATE INDEXはTableに対するALTER操作とみなされます |

## 使用上の注意

- **INVERTED**転置インデックスは、新しく挿入されたデータに対して即座に有効になります。履歴データについては、BUILD INDEX操作を使用してインデックスを構築する必要があります。
- **NGRAM_BF** NGram BloomFilterインデックスは、作成後にすべてのデータに対してバックグラウンドでスキーマ変更を実行し、インデックス構築を完了します。進行状況はSHOW ALTER TABLE COLUMNを使用して確認できます。

## 例

- `table1`に転置インデックス`index1`を作成

  ```sql
  CREATE INDEX index1 ON table1 USING INVERTED;
  ```
`table1`上にNGram BloomFilterインデックス`index2`を作成する

  ```sql
  CREATE INDEX index2 ON table1 USING NGRAM_BF PROPERTIES("gram_size"="3", "bf_size"="1024");
  ```
- `table1`の`embedding`ベクトル列にANNインデックス`index3`を作成する。

  ```sql
  CREATE INDEX index3 ON table1 (`embedding`) USING ANN PROPERTIES(
    "index_type"="hnsw",
    "metric_type"="l2_distance",
    "dim"="128"
  );
    ```
